--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
       
       <!-- profile-card is the BEM block -->
       <article class="profile-card  " aria-labelledby="profile-name">
-   
-
         <header class="profile-card__header">
           <!-- بک‌گراند آبی + pattern -->
           <div class="profile-card__header-bg">
@@ -47,12 +45,10 @@
 
             <!-- مکان -->
             <figcaption class="profile-card__location">
-              <img src="images/icon-location.svg" alt="" class="profile-card__location-icon">
               London
             </figcaption>
           </figure>
         </header>
-
 
         <footer class="profile-card__footer" aria-label="profile statistics">
           <ul class="profile-card__stats" role="list">
@@ -73,7 +69,7 @@
       </article>
 
       <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          rel="noopener">Frontend Mentor</a>. Coded by <a href="#">Your Name</a>.</p>
+          rel="noopener">Frontend Mentor</a>. Coded by <a href="#">Sam Rostami</a>.</p>
     </section>
   </main>
 </body>
